tests/testcases/errors/BCE0043-1.boo
"""
BCE0043-1.boo(4,7): BCE0043: Unexpected token: 0xab3.
"""
print(0xab3gf)

